fix overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ html {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
-  overflow: hidden;
+  overflow: auto;
   background-color: $background-color;
   color: $text-color;
 }
